Fix margin of photoindex to align center

--- a/app/assets/stylesheets/api/home_feed.scss
+++ b/app/assets/stylesheets/api/home_feed.scss
@@ -36,7 +36,8 @@
     width: calc(0.90 * 100vw);
     padding-top: 20px;
     //   margin-left: 55px;
-    margin-left: 70px;
+    // margin-left: 70px;
+    margin-left: 5vw;
 }
 
 .post-index-title {
